--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,9 +5,19 @@
   "dependencies": {
     "immutability-helper": "^2.2.2",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-addons-css-transition-group": "^15.6.0",
+    "react-addons-shallow-compare": "^15.6.0",
+    "react-dom": "^15.5.4",
+    "react-dom-factories": "^1.0.1",
+    "react-redux": "^5.0.6",
+    "react-selectize": "^3.0.1",
+    "react-sortable-hoc": "^0.6.7",
+    "react-transition-group": "^1.1.2",
+    "redux": "^3.7.2",
+    "redux-form": "^7.0.4"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
